--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
   font-family: 'Lato';
 }
 
@@ -40,7 +40,7 @@ hr.star-light {
 
 hr.star-light:after {
   color: #fff;
-  background-color: #18BC9C;
+  background-color: #f2863d;
 }
 
 hr.star-dark {
